2007-08-21 Niklas Knutsson  <nq@altern.org>

	* Fix crash with unsupported operator in RPN syntax (bug 1778267)

2007-08-07 Niklas Knutsson  <nq@altern.org>

	* New Simplified Chinese translation (Roy Qu <royqh1979@gmail.com>)

2007-06-17 Niklas Knutsson  <nq@altern.org>

	* Miscellaneous fixes before release

2007-04-27 Niklas Knutsson  <nq@altern.org>

	* New functions: addTime(), isNumber(), isReal(), isRational(), isInteger(),
	  representsNumber(), representsReal(), representsRational(), representsInteger()
	* Show argument name instead of \x in argument condition

2007-04-26 Niklas Knutsson  <nq@altern.org>

	* Use Lambert W to solve equations
	* Fix infinite loop when solving some equations
	* New functions: addDays(), addMonths(), addYear()

2007-04-19 Niklas Knutsson  <nq@altern.org>

	* Enhance lambertw()
	* Add the Omega constant

2007-04-18 Niklas Knutsson  <nq@altern.org>

	* Implement the Lambert W function

2007-04-17 Niklas Knutsson  <nq@altern.org>

	* Avoid floating point underflow by, in approximate mode, 
	  checking against the value of pi in sin() and cos()
	* Add more exact values for sin() and cos()

2007-04-15 Niklas Knutsson  <nq@altern.org>

	* Fix simplification of (1-1/x)^3 and similar

2007-03-31 Niklas Knutsson  <nq@altern.org>

	* Add grams of TNT (gTNT/gramTNT) and tons of TNT (tTNT/tonTNT) units

2007-03-29 Niklas Knutsson  <nq@altern.org>

	* Fix parsing of unit expressions (when converting) such as W/(m K)
	* Expand data on elements

2007-03-20 Niklas Knutsson  <nq@altern.org>

	* Fix clumsy mistakes in setPrefixes() leading to crashes
	* Add typographic units
	* Add some old french length units
	* Add alternative name "variations" for permutations
	* Fix atomic mass unit being put in second density category

2006-12-16 Niklas Knutsson  <nq@altern.org>

	* New French translation (Nicolas Laug <Nicolas.Laug@polymtl.ca>)

2006-11-18 Niklas Knutsson  <nq@altern.org>

	* Update Swedish translation
